# backEnd

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
config/config/: settings.py
gestaoEscolar/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
gestaoEscolar/migrations/: 0001_initial.py  0002_matricula_aluno_matricula.py  0003_turma.py  0004_professores.py  0005_curso.py  0006_alter_curso_carga_horaria_alter_curso_modalidade_and_more.py  0006_coordenador.py  0007_aluno_turma_alter_aluno_cpf_alter_turma_periodo.py  0008_nota.py  0009_disciplina_frequencia.py  0009_frequencia.py  0010_alter_frequencia_presenca_aluno_disciplina_and_more.py  0011_alter_frequencia_presenca_aluno.py  0012_alter_frequencia_presenca_aluno.py  0013_alter_frequencia_presenca_aluno.py
